public/main.css
/* ... */
.logoCSS .a.a4 {
  top: 17px;
  left: 14px;
}

.logoCSS .b.b4 {
  top: 29px;
  left: 14px;
}

.notFoundMessage {
  text-align: center;
}

.notFoundIcon {
  margin: 50px 0;
  text-align: center;
}
.notFoundIcon .notFoundIconCSS {
  display: inline-block;
  height: 25.5vw;
  margin: 0 1vw;
  overflow: hidden;
  position: relative;
  text-align: center;
  width: 17vw;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .a {
  border-color: transparent transparent #B0B0B0 transparent;
  border-width: 0 0 8vw 8vw;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .a.a1 {
  border-color: transparent transparent #B0B0B0 transparent;
  left: 0px;
  top: 1px;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .a.a2 {
  left: 9vw;
  top: 0px;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .a.a3 {
  border-width: 0px 0px 7vw 7vw;
  left: 1vw;
  top: 9vw;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .a.a4 {
  border-width: 0px 0px 8.35vw 8.35vw;
  left: 8.55vw;
  top: 8.6vw;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .b {
  border-color: #B0B0B0 transparent transparent transparent;
  border-width: 8vw 8vw 0 0;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .b.b1 {
  border-color: #B0B0B0 transparent transparent transparent;
  left: 0px;
  top: 8vw;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .b.b2 {
  border-width: 7.4vw 7.4vw 0px 0px;
  left: 8.6vw;
  top: 8.6vw;
}
.notFoundIcon .notFoundIconCSS.notFound_4_IconCSS .b.b3 {
  border-width: 8.35vw 8.35vw 0px 0px;
  left: 8.55vw;
  top: 16.89vw;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS {
  width: 16vw;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .a {
  border-color: transparent transparent #fd8724 transparent;
  border-width: 0 0 8vw 8vw;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .a.a1 {
  border-color: transparent transparent #fd8724 transparent;
  left: 0px;
  top: 1px;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .a.a2 {
  border-width: 0 0 7.5vw 7.5vw;
  left: 8.55vw;
  top: 1.1vw;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .a.a3 {
  border-width: 0px 0px 7vw 7vw;
  left: 1vw;
  top: 9vw;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .b {
  border-color: #fd8724 transparent transparent transparent;
  border-width: 8vw 8vw 0 0;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .b.b1 {
  border-color: #fd8724 transparent transparent transparent;
  left: 0px;
  top: 8vw;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .b.b2 {
  border-width: 7.4vw 7.4vw 0px 0px;
  left: 8.6vw;
  top: 0vw;
}
.notFoundIcon .notFoundIconCSS.notFound_0_IconCSS .b.b3 {
  border-width: 7.5vw 7.5vw 0px 0px;
  left: 8.6vw;
  top: 8.5vw;
}

.notFoundErrorPage {
  background: #303030;
  color: white;
  text-align: center;
}
.notFoundErrorPage .pageTitle {
  display: none;
}
.notFoundErrorPage .mainWrapper {
  margin: 0 auto;
}

.navWrapper {
  background: #F8F8F8;
  box-sizing: border-box;
  order: 1;
}
.navWrapper .navLoader, .navWrapper .navToggle {
  height: 100%;
}

.navWrapper h3 {
  font-size: 19px;
}

.navWrapper .navList li a {
  color: #B0B0B0;
  display: block;
}

.navWrapper .navList li a:hover {
  background-color: #DADADA;
  color: #303030;
}

.navWrapper .navList li h4 {
  font-family: "Whitney SSm A", "Whitney SSm B", Arial, Helvetica, sans-serif;
  font-size: 12px;
  margin-bottom: 10px;
  text-transform: uppercase;
}
.navWrapper .navList li h4 a {
  color: #fd8724;
  padding-left: 30px;
}

.navWrapper .subList {
  margin-bottom: 30px;
}

.navList {
  position: relative;
}

.navWrapper .navList .subListItem h5 a {
  color: #505050;
  font-weight: 400;
  text-transform: capitalize;
}

.navWrapper .navList.apiNavList .subListItem h5 {
  line-height: 0.7em;
}

.navWrapper .navList.apiNavList .subListItem h5 a {
  font-family: "Whitney SSm A", "Whitney SSm B", Arial, Helvetica, sans-serif;
  font-size: 12px;
  font-weight: 400;
  padding: 7.5px 30px;
  word-wrap: break-word;
}

.navWrapper .navList.apiNavList .secondLevelListItem h6 {
  line-height: 0.7em;
}

.navWrapper .navList.apiNavList .secondLevelListItem h6 a {
  font-family: "Whitney SSm A", "Whitney SSm B", Arial, Helvetica, sans-serif;
  font-size: 12px;
  font-weight: 400;
  padding: 7.5px 0 7.5px 45px;
  word-wrap: break-word;
}

.navWrapper .navList .subListItem h5 a {
  position: relative;
  padding-left: 30px;
}

.subListItem h5 a::before {
  border-color: transparent transparent transparent transparent;
  border-style: solid;
  border-width: 5px 0 5px 8.7px;
  content: "";
  height: 0;
  left: 12px;
  position: absolute;
  top: 8px;
  -webkit-transition: border-color 0.5s;
  -moz-transition: border-color 0.5s;
  transition: border-color 0.5s;
  width: 0;
}

.apiNavList .subListItem h5 a::before {
  top: 7.5px;
}

.subListItem:hover h5 a::before {
  border-color: transparent transparent transparent #505050;
}

.navWrapper .navList .subListItem.itemActive h5 a,
.navWrapper .navList.apiNavList .secondLevelListItem.secondLevelItemActive h6 a {
  font-weight: 700;
}

.navWrapper .navList.apiNavList .secondLevelListItem.secondLevelItemActive h6 a {
  color: #303030;
}

.subListItem.itemActive h5 a::before {
  border-color: transparent transparent transparent #fd8724;
}

.apiNavList .subListItem h5::before {
  top: 0;
}
.apiNavList .secondLevelList {
  display: none;
}
.apiNavList .itemActive .secondLevelList {
  display: block;
}
.apiNavList .navGroup .subList {
  display: none;
}
.apiNavList .navGroup.navGroupActive .subList {
  display: block;
}

.innerContent img {
  max-width: 100%;
}

.innerContent ul {
  list-style: disc inside;
  padding-left: 10px;
}

.innerContent strong {
  font-weight: 700;
}

.innerContent em {
  font-style: italic;
}

.innerContent code, .highlight {
  font-family: Hack, monospace;
  font-size: 90%;
  line-height: 1.4em;
}

.innerContent p > code {
  background: #DFF7E5;
  border-radius: 2px;
  color: #2db04b;
  padding: 1px 3px;
}
/* ... */

